# tinynarm

./: .gitignore  README.md  basic_run.py  dataset_report.py  discretization_example.py  niaarm_run.py  output.csv  pyproject.toml
.github/workflows/: test.yml
datasets/: README.md
examples/: basic_run.py  comparison_niaarm.py  discretization_example.py
micronarm/: __init__.py  item.py  micronarm.py
tests/: test_abalone.py  test_dataset.py  test_discretization.py  test_micronarm.py  test_sportydatagen_dataset.py  test_tinyarm.py  test_tinynarm.py
tests/datasets/: new_dataset.csv  sportydatagen_discretized.csv
tinynarm/: __init__.py  discretization.py  tinynarm.py  utils.py
