[tool.poetry]
name = "micronarm"
version = "0.1.0"
description = ""
authors = ["Iztok Fister Jr. <iztok@iztok-jr-fister.eu>"]

[tool.poetry.dependencies]
python = "^3.11"
niaarm = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
